# miet-mpi

./: pyproject.toml
1-lab/: counter.py  report.md  run.sh
2-lab/: counter-2.py  report.md  run.sh
3-lab/: counter-3.py  report.md  run.sh
4-lab/: app.py  node.py  report.md  run.sh  tasks.txt
