[tool.poetry]
name = "miet-mpi"
version = "0.1.0"
description = "MIET course of MPI technology"
authors = ["Novoseltcev Stanislav `st.a.novoseltce@gmail.com`"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mpi4py = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
